--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@ out/
 # Ignores development broadcast logs
 !/broadcast
 /broadcast/*/31337/
+/broadcast
 /broadcast/**/dry-run/
-
+/.github
 # Docs
 docs/
 
